# ChangeLog for catalyst
# Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  +modules/catalyst/target/embedded.py,
  -modules/catalyst/target/embedded_target.py,
  +modules/catalyst/target/generic.py,
  +modules/catalyst/target/generic_stage.py,
  -modules/catalyst/target/generic_stage_target.py,
  -modules/catalyst/target/generic_target.py,
  +modules/catalyst/target/grp.py, -modules/catalyst/target/grp_target.py,
  -modules/catalyst/target/livecd_stage1_target.py,
  +modules/catalyst/target/livecd_stage1.py,
  -modules/catalyst/target/livecd_stage2_target.py,
  +modules/catalyst/target/livecd_stage2.py,
  +modules/catalyst/target/netboot.py,
  -modules/catalyst/target/netboot2_target.py,
  +modules/catalyst/target/netboot2.py,
  -modules/catalyst/target/netboot_target.py,
  +modules/catalyst/target/snapshot.py,
  -modules/catalyst/target/snapshot_target.py,
  -modules/catalyst/target/stage1_target.py,
  +modules/catalyst/target/stage1.py,
  -modules/catalyst/target/stage2_target.py,
  +modules/catalyst/target/stage2.py,
  -modules/catalyst/target/stage3_target.py,
  +modules/catalyst/target/stage3.py,
  -modules/catalyst/target/stage4_target.py,
  +modules/catalyst/target/stage4.py, +modules/catalyst/target/tinderbox.py,
  -modules/catalyst/target/tinderbox_target.py:
  Remove _target from target module filenames, since they're already in
  target/ subdir

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> -modules/builder.py,
  modules/catalyst/arch/__init__.py, modules/catalyst/arch/alpha.py,
  modules/catalyst/arch/amd64.py, modules/catalyst/arch/arm.py,
  modules/catalyst/arch/hppa.py, modules/catalyst/arch/ia64.py,
  modules/catalyst/arch/mips.py, modules/catalyst/arch/powerpc.py,
  modules/catalyst/arch/s390.py, modules/catalyst/arch/sh.py,
  modules/catalyst/arch/sparc.py, modules/catalyst/arch/x86.py:
  Remove builder.py and all references
