@@ -285,7 +285,7 @@ if __name__ == "__main__":
 	# import configuration file and import our main module using those settings
 	parse_config(myconfig)
 
-	from catalyst_support import *
+	from catalyst.support import *
 	
 	# Start checking that digests are valid now that the hash_map was imported from catalyst_support
 	if conf_values.has_key("digests"):
