@@ -6,7 +6,7 @@ the driver class for pretty much everything that Catalyst does.
 
 import os,string,imp,types,shutil
 from catalyst.support import *
-from generic_target import *
+from catalyst.target.generic import *
 from stat import *
 import catalyst.lock
 import catalyst.arch
